--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fanstasy-fe",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11.4.1",
@@ -20,7 +21,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.6"
+    "typescript": "^4.1.6",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
